--- a/themes/rosepine.css
+++ b/themes/rosepine.css
@@ -4,7 +4,7 @@
   --bg-secondary: #1f1d2e;
   --text-primary: #e0def4;
   --text-secondary: #908caa;
-  --accent: #ebbcba; /* Rose */
+  --accent: #eb6f92; /* Rose */
   --border-color: #403d52;
   --bg-grid: #26233a;
   --overlay-color: #FFFFFF;
@@ -20,7 +20,7 @@
   --bg-secondary: #fffaf3;
   --text-primary: #575279;
   --text-secondary: #797593;
-  --accent: #d7827e; /* Rose */
+  --accent: #b4637a; /* Rose */
   --border-color: #dfdad9;
   --bg-grid: #dfdad9;
   --overlay-color: #000000;
